Improving the solution